# python-template

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .pyre_configuration  Dockerfile  Makefile  README.md  pyproject.toml
.cursor/commands/: update.md
.github/workflows/: config.yml  continuous_integration.yml
python_template/: __init__.py
python_template/src/: math_example.py
python_template/tests/: test_math_example.py
scripts/: install_pre_commit_hooks.sh  run_pre_commit_hooks.sh
tests/: test_math_example.py
