[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name"}
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1", 
    "mypy>=1.17.1",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
    "bandit>=1.8.6",
]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 120
fix = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
