[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name"}
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.9.0",
    "isort>=6.0.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 120
fix = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
