[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name"}
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.9.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "pyre-check>=0.9.25",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
skip_gitignore = true
src_paths = ["python_template", "tests"]
known_first_party = ["python_template"]
filter_files = true

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "B", "UP", "SIM", "C4", "RUF"]
ignore = ["E203", "E501"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config --cov=python_template --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that touch external systems",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
